syntax = "proto3";
package flstorage.storage.v1;

option go_package = "flstorage/x/storage/types";

// StoredFile defines the StoredFile message.
message StoredFile {
  string original_hash = 1;
  string tag = 2;
  repeated string shard_hashes = 3;
  string creator = 4;
}
